--- a/prepros.config
+++ b/prepros.config
@@ -501,7 +501,7 @@
               "replaceWith": "css"
             }
           ],
-          "relativePath": "../../css"
+          "relativePath": "../css"
         }
       },
       "less": {
